<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sonumber"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/partno"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/productposition"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/allocated"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>