<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E3155"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/epostlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="289dp"
        android:layout_marginRight="24dp"
        android:background="#ff0e3155"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:src="@mipmap/account" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:hint="@string/loginaccount"
                android:textColorHint="#9EA6AF"
                 android:textSize="14sp"/>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="353dp"
        android:layout_marginRight="24dp"
        android:background="#ff0e3155"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:src="@mipmap/lock" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:hint="@string/loginpw"
            android:textColorHint="#9EA6AF"
            android:textSize="14sp" />


    </LinearLayout>
    <!--<TextView
        android:hint="@string/loginaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/account"
        android:drawableTop="14dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="208dp"
        android:text="@string/logininfos"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:textSize="18sp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="437dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DCA100"
        android:text="@string/login" />
    
</RelativeLayout>