<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/productinmanage"
            android:textColor="#fff"
            android:gravity="center"
            android:background="#0E3155"
            />
        <ImageView
            android:layout_marginLeft="10dp"
            android:id="@+id/exit_productin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/exit"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/productposition"
                        android:textColor="#666"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/productin_postion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/scanning"
                        android:textColor="#666"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/productin_scan"
                        android:textSize="14sp"
                        android:textColor="#000"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView

                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/sonumber"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/sono_producton"
                        android:textSize="14sp"
                        android:textColor="#000"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/barcode"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/barcode"
                        android:textSize="14sp"
                        android:textColor="#000"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/number"
                        android:textColor="#666"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/product_quality"
                        android:textSize="14sp"
                        android:textColor="#000"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >

            <Button
                android:id="@+id/commit_productin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/round_conner"
                android:text="@string/commitproductin"
                android:textColor="#fff"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>